<resources>
    <string name="app_name">practica2DSM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_description">Descripción</string>
    <string name="txt_rut">Rut</string>
    <string name="txt_age">Edad</string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_search">Buscar</string>
    <string name="btn_previos">Anterior</string>
    <string name="txt_list">Listado de Consolas</string>
    <string name="btn_next">Siguiente</string>
</resources>