<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toEndOf="@+id/txt_description"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_description"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="0.116" />

    <ListView
        android:id="@+id/lv_console"
        android:layout_width="415dp"
        android:layout_height="212dp"
        android:background="#5955D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        app:layout_constraintVertical_bias="0.351"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/txt_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_list"
        app:layout_constraintBottom_toTopOf="@+id/lv_console"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_description"
        app:layout_constraintVertical_bias="0.739" />

</androidx.constraintlayout.widget.ConstraintLayout>